Add more randomness

--- a/vocab.yaml
+++ b/vocab.yaml
@@ -24,6 +24,7 @@ vocab:
                 - "שברי"
                 - "נתחי"
                 - "פרחי"
+                - "מדליוני"
               ingridientA:
                 - "כרובים"
                 - "חצילים"
