--- a/vocab.yaml
+++ b/vocab.yaml
@@ -8,8 +8,8 @@ vocab:
       - "שכם"
       - "הרי ירושלים"
       - "העיר העתיקה"
-      - "הגליל"    
-    names:      
+      - "הגליל"
+    names:
       plural:
           male:
               prefixA:
@@ -91,6 +91,7 @@ vocab:
                 - "סוערים"
                 - "בלי דת"
                 - "רעננים"
+                - "מסחררי נפש"
               verb:
                 - "מלאים"
                 - "מסתתרים"
@@ -159,6 +160,7 @@ vocab:
                 - "סוערות"
                 - "בלי דת"
                 - "רעננות"
+                - "מסחררות נפש"
               verb:
                 - "מלאות"
                 - "מסתתרות"
@@ -193,6 +195,7 @@ vocab:
                 - "אפויות בתנור עצים"
                 - "ספוגות"
                 - "מתבוססת"
+                - "שחוטות"
       singular:
           male:
               prefixA:
@@ -220,6 +223,7 @@ vocab:
                 - "המבורגר"
                 - "מינוט סטייק"
                 - "ראגו"
+                - "טטאמי"
               ingridientA:
                 - "כרוב"
                 - "חציל"
@@ -241,6 +245,7 @@ vocab:
                 - "דבש שחור"
                 - "סלק"
                 - "טלה"
+                - "אוקטופוס"
               prefixB:
                 - "שורש"
                 - "קרע"
@@ -307,6 +312,7 @@ vocab:
                 - "בלי דת"
                 - "רענן"
                 - "תורכי"
+                - "מסחרר נפש"
               verb:
                 - "מלא"
                 - "מסתתר"
@@ -359,6 +365,7 @@ vocab:
                 - "מחבת"
                 - "מפולת"
                 - "פסטת"
+                - "גרידת"
               ingridientA:
                 - "כרובית"
                 - "עגבניה"
@@ -371,6 +378,7 @@ vocab:
                 - "כרישה"
                 - "חלה"
                 - "פלמידה"
+                - "גבינה של עז"
               prefixB:
                 - "שחלת"
                 - "שורת"
@@ -383,6 +391,8 @@ vocab:
                 - "מחבת"
                 - "מפולת"
                 - "פסטת"
+                - "חיית"
+                - "שמלת"
               ingridientB:
                 - "כרובית"
                 - "טחינה"
@@ -399,6 +409,7 @@ vocab:
                 - "שמנת חמוצה"
                 - "חלה"
                 - "חזרת"
+                - "פארידה"
               adjective:
                 - "ים תיכונית"
                 - "ישראלית"
@@ -421,6 +432,7 @@ vocab:
                 - "סוערת"
                 - "בלי דת"
                 - "רעננה"
+                - "מסחררת נפש"
               verb:
                 - "מלאה"
                 - "מסתתרת"
