Less repetition, more vocab

--- a/vocab.yaml
+++ b/vocab.yaml
@@ -126,6 +126,7 @@ vocab:
                 - "מוכתמים"
                 - "חצויים"
                 - "ספוגים"
+                - "משובצים"
           female:
               prefixA:
                 - "שחלות"
@@ -134,6 +135,9 @@ vocab:
                 - "נקבות"
                 - "פקעות"
               ingridientA:
+                - "עגבניות"
+                - "עגבניות פרא"
+                - "עגבניות מדבר"
               prefixB:
                 - "שחלות"
                 - "שורות"
@@ -196,6 +200,7 @@ vocab:
                 - "ספוגות"
                 - "מתבוססת"
                 - "שחוטות"
+                - "משובצות"
       singular:
           male:
               prefixA:
@@ -348,6 +353,8 @@ vocab:
                 - "ספוג"
                 - "טרוף"
                 - "מיונן"
+                - "משובץ"
+                - "מוכתם"
           female:
               prefixA:
                 - "אמולסיית"
@@ -366,6 +373,7 @@ vocab:
                 - "מפולת"
                 - "פסטת"
                 - "גרידת"
+                - "סינייה"
               ingridientA:
                 - "כרובית"
                 - "עגבניה"
@@ -379,6 +387,7 @@ vocab:
                 - "חלה"
                 - "פלמידה"
                 - "גבינה של עז"
+                - "חיטה אדומה"
               prefixB:
                 - "שחלת"
                 - "שורת"
@@ -393,6 +402,7 @@ vocab:
                 - "פסטת"
                 - "חיית"
                 - "שמלת"
+                - "חמאת"
               ingridientB:
                 - "כרובית"
                 - "טחינה"
@@ -473,3 +483,5 @@ vocab:
                 - "נשפכת"
                 - "צלויה בתוך דוד פלדה"
                 - "טרופה"
+                - "משובצת"
+                - "עירומה"
